<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="60dp"
            android:text="@string/dashboard"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bpsc"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/option_shape"
        android:text="@string/bpsc"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        android:onClick="openBpscActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/upsc"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/option_shape"
        android:text="@string/upsc"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/railways"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/option_shape"
        android:text="@string/railways"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/bank"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/option_shape"
        android:text="@string/bank"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>