<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginPage"
    >


    <EditText
        android:id="@+id/emailId"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="288dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:textColor="@color/gray"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:textColor="@color/gray"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttonshape"
        android:onClick="onSignInClick"
        android:text="@string/signIn"
        android:textColor="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttonshape"
        android:text="@string/signUp"
        android:textColor="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="124dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="71dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>